--- a/pallets/acala/Cargo.toml
+++ b/pallets/acala/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "pallet-template"
-authors = ["Anonymous"]
-description = "FRAME pallet template for defining custom runtime logic."
+name = "pallet-acala-performance"
+description = "Pallet for Acala performance benchmarking"
 version = "0.1.0"
-license = "Unlicense"
-homepage = "https://substrate.io"
-repository = "https://github.com/paritytech/substrate/"
+license = "GPLv3"
 edition = "2021"
 
 [package.metadata.docs.rs]
