--- a/tests/acala/0001-simple-network.toml
+++ b/tests/acala/0001-simple-network.toml
@@ -4,6 +4,7 @@ timeout = 1000
 [relaychain]
 default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
 chain = "rococo-local"
+default_command = "./polkadot"
 
   [[relaychain.nodes]]
   name = "alice"
@@ -22,7 +23,7 @@ addToGenesis = false
   [parachains.collator]
   name = "collator01"
   image = "{{COL_IMAGE}}"
-  command = "/usr/local/bin/adder-collator"
+  command = "target/release/parachain-collator"
 
 [types.Header]
 number = "u64"
