--- a/tests/examples/0002-wococo.toml
+++ b/tests/examples/0002-wococo.toml
@@ -4,7 +4,7 @@ timeout = 1000
 [relaychain]
 default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
 chain = "wococo-local"
-command = "polkadot"
+default_command = "./polkadot"
 
   [[relaychain.nodes]]
   name = "alice"
@@ -32,7 +32,7 @@ id = 100
   [parachains.collator]
   name = "collator01"
   image = "{{COL_IMAGE}}"
-  command = "/usr/local/bin/adder-collator"
+  command = "target/release/parachain-collator"
 
 [types.Header]
 number = "u64"
