--- a/tests/examples/0006-resources.toml
+++ b/tests/examples/0006-resources.toml
@@ -4,7 +4,7 @@ timeout = 1000
 [relaychain]
 default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
 chain = "rococo-local"
-command = "polkadot"
+default_command = "./polkadot"
 [relaychain.default_resources]
 limits = { memory = "2G", cpu = "2" }
 requests = { memory = "1G", cpu = "1" }
