--- a/tests/examples/0002-wococo.toml
+++ b/tests/examples/0002-wococo.toml
@@ -3,7 +3,7 @@ timeout = 1000
 
 [relaychain]
 default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
-chain = "wococo-local"
+chain = "rococo-local"
 default_command = "./polkadot"
 
   [[relaychain.nodes]]
@@ -28,6 +28,7 @@ default_command = "./polkadot"
 
 [[parachains]]
 id = 100
+cumulus_based = true
 
   [parachains.collator]
   name = "collator01"
