--- a/tests/astar/polkadot-js-example.toml
+++ b/tests/astar/polkadot-js-example.toml
@@ -9,23 +9,20 @@ default_command = "./polkadot"
   [[relaychain.nodes]]
   name = "alice"
   validator = true
-  extra_args = [ "--alice", "-lparachain=debug" ]
+  extra_args = [ "--alice" ]
 
   [[relaychain.nodes]]
   name = "bob"
   validator = true
-  extra_args = [ "--bob", "-lparachain=debug" ]
+  extra_args = [ "--bob" ]
 
 [[parachains]]
 id = 100
-addToGenesis = false
+addToGenesis = true
+cumulus_based = true
 
   [parachains.collator]
   name = "collator01"
   image = "{{COL_IMAGE}}"
   command = "target/release/parachain-collator"
-
-[types.Header]
-number = "u64"
-parent_hash = "Hash"
-post_state = "Hash"
+  args = ["-lparachain=debug"]
