--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "pallet-acala-performance"
-description = "Pallet for Acala performance benchmarking"
+name = "pallet-template"
+authors = ["Anonymous"]
+description = "FRAME pallet template for defining custom runtime logic."
 version = "0.1.0"
-license = "GPLv3"
+license = "Unlicense"
+homepage = "https://substrate.io"
+repository = "https://github.com/paritytech/substrate/"
 edition = "2021"
 
 [package.metadata.docs.rs]
