--- a/.github/workflows/solo-tps-bench.yml
+++ b/.github/workflows/solo-tps-bench.yml
@@ -26,4 +26,8 @@ jobs:
       # zombienet
       - name: Run zombienet
         run: |
+          # Prevent the zombienet.sh script from building the collator since it is not needed.
+          mkdir -p target/release
+          echo "not needed" > target/release/parachain-collator
+          
           ./zombienet.sh test tests/examples/solo.feature
