Install polkadot/api
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/.github/workflows/solo-tps-bench.yml
+++ b/.github/workflows/solo-tps-bench.yml
@@ -29,5 +29,6 @@ jobs:
           # Prevent the zombienet.sh script from building the collator since it is not needed.
           mkdir -p target/release
           echo "not needed" > target/release/parachain-collator
+          cd tests/stps && npm i @polkadot/api && cd -
 
           ./zombienet.sh test tests/stps/solo.feature
