--- a/tests/stps/relay.toml
+++ b/tests/stps/relay.toml
@@ -2,7 +2,7 @@
 timeout = 1000
 
 [relaychain]
-default_image = "{{ZOMBIENET_INTEGRATION_TEST_IMAGE}}"
+default_image = "docker.io/paritypr/polkadot-debug:master"
 chain = "rococo-local"
 default_command = "./polkadot"
 
