--- a/sender/Cargo.toml
+++ b/sender/Cargo.toml
@@ -15,3 +15,5 @@ futures = "0.3.21"
 log = "0.4.16"
 subxt = "0.20.0"
 clap = { version = "3.1.15", features = ["derive"] }
+serde_json = "1.0.81"
+serde = {version = "1.0.137", features = ["derive"] }
