--- a/tests/stps/relay.toml
+++ b/tests/stps/relay.toml
@@ -1,10 +1,14 @@
 [settings]
-timeout = 1000
+timeout = 10000
+node_spawn_timeout = 240
 
 [relaychain]
 default_image = "docker.io/paritypr/polkadot-debug:master"
 chain = "rococo-local"
 default_command = "./polkadot"
+
+[relaychain.genesis.runtime.runtime_genesis_config]
+balances = {% include("../examples/funded-accounts.json") %}
 
 [[relaychain.nodes]]
 name = "alice"
