--- a/tests/stps/relay.toml
+++ b/tests/stps/relay.toml
@@ -5,7 +5,7 @@ node_spawn_timeout = 240
 [relaychain]
 default_image = "docker.io/paritypr/polkadot-debug:master"
 chain = "rococo-local"
-default_command = "./polkadot"
+default_command = "polkadot"
 
 [relaychain.genesis.runtime.runtime_genesis_config]
 balances = {% include("../examples/funded-accounts.json") %}
