--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sender"
+name = "utils"
 version = "0.1.0"
 edition = "2021"
 
@@ -17,3 +17,4 @@ subxt = "0.20.0"
 clap = { version = "3.1.15", features = ["derive"] }
 serde_json = "1.0.81"
 serde = {version = "1.0.137", features = ["derive"] }
+async-std = { version = "1.11.0", features = ["attributes"] }
