--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -7,13 +7,15 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.9.0"
-sp-keyring = "6.0.0"
+sp-keyring = "7.0.0"
+sp-runtime = "7.0.0"
+sp-core = { version = "7.0.0", default-features = false  }
 tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
 hex = "0.4.3"
 futures = "0.3.21"
 log = "0.4.16"
-subxt = "0.20.0"
+subxt = "0.25.0"
 clap = { version = "3.1.15", features = ["derive"] }
 serde_json = "1.0.81"
 serde = {version = "1.0.137", features = ["derive"] }
