--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   test-code:
     runs-on: ubuntu-20.04
+    defaults:
+      run:
+        working-directory: ./utils
 
     steps:
     - name: Checkout Code
