--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
-name = "utils"
+name = "sender"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
-subxt = "0.25.0"
+utils = { path = ".." }
 log = "0.4.16"
+sp-core = { version = "7.0.0", default-features = false  }
+sp-runtime = "7.0.0"
+subxt = "0.25.0"
+clap = { version = "4.0.32", features = ["derive"] }
+tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
+futures = "0.3.21"
