--- a/utils/funder/Cargo.toml
+++ b/utils/funder/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 utils = { path = ".."}
 log = "0.4.16"
+env_logger = "0.9.0"
 futures = "0.3.21"
 serde_json = "1.0.81"
 sp-core = { version = "7.0.0", default-features = false  }
