--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 utils = { path = ".." }
 log = "0.4.16"
+env_logger = "0.9.0"
 sp-core = { version = "7.0.0", default-features = false  }
 sp-runtime = "7.0.0"
 subxt = "0.25.0"
