--- a/utils/tps/Cargo.toml
+++ b/utils/tps/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 utils = { path = ".."}
 log = "0.4.16"
+env_logger = "0.9.0"
 clap = { version = "4.0.32", features = ["derive"] }
 tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
 
