--- a/utils/charts/tps/helmfile.yaml
+++ b/utils/charts/tps/helmfile.yaml
@@ -1,10 +1,10 @@
 repositories:
   - name: chartmuseum
-    url: http://localhost:8080/chartmuseum
+    url: http://localhost:8080
 
 releases:
   - name: stps-tps-scraper
     namespace: rococo
-    chart: chartmuseum/stps-sender-scraper
+    chart: chartmuseum/stps-tps-scraper
     values:
       - ./values.yaml
