--- a/utils/charts/tps/values.yaml
+++ b/utils/charts/tps/values.yaml
@@ -5,15 +5,15 @@
 replicaCount: 1
 
 image:
-  repository: localhost:5000/tps
+  repository: localhost:5000/stps-tps
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
-containerArgs:
-  node-url: ""
-  total-senders: ""
-  n: ""
+containerArguments:
+  node-url: "localrococo-validator-a-node.rococo.svc.cluster.local:9944"
+  total-senders: "1"
+  num: "1684"
 
 imagePullSecrets: []
 nameOverride: ""
