Add conditional compilation and pass it to build image script and dockerfiles

--- a/utils/dockerfiles/Dockerfile.sender
+++ b/utils/dockerfiles/Dockerfile.sender
@@ -4,7 +4,11 @@ COPY . /build
 
 WORKDIR /build/utils/sender
 
-RUN cargo build
+ARG feature_flag
+
+ENV FEATURE=${feature_flag}
+
+RUN cargo build --features=$FEATURE --release
 
 FROM docker.io/library/ubuntu:20.04
 
