--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,3 +14,7 @@ tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros", "time"] }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
 subxt = "0.25.0"
 log = "0.4.16"
+
+[features]
+rococo = []
+tick = []
