--- a/utils/funder/Cargo.toml
+++ b/utils/funder/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-utils = { path = ".."}
+utils = { path = ".." }
 log = "0.4.16"
 env_logger = "0.9.0"
 futures = "0.3.21"
@@ -16,3 +16,7 @@ sp-runtime = "7.0.0"
 subxt = "0.25.0"
 tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
 clap = { version = "4.0.32", features = ["derive"] }
+
+[features]
+tick = ["utils/tick"]
+rococo = ["utils/rococo"]
