--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -6,8 +6,8 @@ on:
       - published
 
 jobs:
-  funder:
-    name:                         Build and push funder image
+  funder-tick:
+    name:                         Build and push funder (tick) image
     runs-on:                      ubuntu-latest
     steps:
     - uses:                       actions/checkout@v3
@@ -19,6 +19,7 @@ jobs:
         dockerfiles: |
           ./utils/dockerfiles/Dockerfile.funder
         build-args: |
+          CHAIN="tick"
           VERSION=${{ github.event.release.tag_name }}
           VCS_REF=${{ github.ref }}
           BUILD_DATE=${{ github.event.release.published_at }}
@@ -36,8 +37,9 @@ jobs:
     - name:                       Check the image
       run: |
         echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
-  sender:
-    name:                         Build and push sender image
+  
+  sender-tick:
+    name:                         Build and push sender (tick) image
     runs-on:                      ubuntu-latest
     steps:
     - uses:                       actions/checkout@v3
@@ -49,6 +51,7 @@ jobs:
         dockerfiles: |
           ./utils/dockerfiles/Dockerfile.sender
         build-args: |
+          CHAIN="tick"
           VERSION=${{ github.event.release.tag_name }}
           VCS_REF=${{ github.ref }}
           BUILD_DATE=${{ github.event.release.published_at }}
@@ -66,8 +69,8 @@ jobs:
     - name:                       Check the image
       run: |
         echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
-  tps:
-    name:                         Build and push tps image
+  tps-tick:
+    name:                         Build and push tps (tick) image
     runs-on:                      ubuntu-latest
     steps:
     - uses:                       actions/checkout@v3
@@ -79,6 +82,104 @@ jobs:
         dockerfiles: |
           ./utils/dockerfiles/Dockerfile.tps
         build-args: |
+          CHAIN="tick"
+          VERSION=${{ github.event.release.tag_name }}
+          VCS_REF=${{ github.ref }}
+          BUILD_DATE=${{ github.event.release.published_at }}
+
+    - name:                       Push image to docker.io
+      id:                         push-to-dockerhub
+      uses:                       redhat-actions/push-to-registry@v2
+      with:
+        registry:                 docker.io/paritytech
+        image:                    stps-tps
+        tags:                     ${{ github.event.release.tag_name }} latest
+        username:                 ${{ secrets.DOCKERHUB_USERNAME }}
+        password:                 ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name:                       Check the image
+      run: |
+        echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
+        name: Build and Publish containers for new releases
+  
+  funder-rococo:
+    name:                         Build and push funder (rococo) image
+    runs-on:                      ubuntu-latest
+    steps:
+    - uses:                       actions/checkout@v3
+    - name:                       Build Image
+      uses:                       redhat-actions/buildah-build@v2
+      with:
+        image:                    stps-funder
+        tags:                     ${{ github.event.release.tag_name }} latest
+        dockerfiles: |
+          ./utils/dockerfiles/Dockerfile.funder
+        build-args: |
+          CHAIN="rococo"
+          VERSION=${{ github.event.release.tag_name }}
+          VCS_REF=${{ github.ref }}
+          BUILD_DATE=${{ github.event.release.published_at }}
+
+    - name:                       Push image to docker.io
+      id:                         push-to-dockerhub
+      uses:                       redhat-actions/push-to-registry@v2
+      with:
+        registry:                 docker.io/paritytech
+        image:                    stps-funder
+        tags:                     ${{ github.event.release.tag_name }} latest
+        username:                 ${{ secrets.DOCKERHUB_USERNAME }}
+        password:                 ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name:                       Check the image
+      run: |
+        echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
+  
+  sender-rococo:
+    name:                         Build and push sender (rococo) image
+    runs-on:                      ubuntu-latest
+    steps:
+    - uses:                       actions/checkout@v3
+    - name:                       Build Image
+      uses:                       redhat-actions/buildah-build@v2
+      with:
+        image:                    stps-sender
+        tags:                     ${{ github.event.release.tag_name }} latest
+        dockerfiles: |
+          ./utils/dockerfiles/Dockerfile.sender
+        build-args: |
+          CHAIN="rococo"
+          VERSION=${{ github.event.release.tag_name }}
+          VCS_REF=${{ github.ref }}
+          BUILD_DATE=${{ github.event.release.published_at }}
+
+    - name:                       Push image to docker.io
+      id:                         push-to-dockerhub
+      uses:                       redhat-actions/push-to-registry@v2
+      with:
+        registry:                 docker.io/paritytech
+        image:                    stps-sender
+        tags:                     ${{ github.event.release.tag_name }} latest
+        username:                 ${{ secrets.DOCKERHUB_USERNAME }}
+        password:                 ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name:                       Check the image
+      run: |
+        echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
+  
+  tps-rococo:
+    name:                         Build and push tps (rococo) image
+    runs-on:                      ubuntu-latest
+    steps:
+    - uses:                       actions/checkout@v3
+    - name:                       Build Image
+      uses:                       redhat-actions/buildah-build@v2
+      with:
+        image:                    stps-tps
+        tags:                     ${{ github.event.release.tag_name }} latest
+        dockerfiles: |
+          ./utils/dockerfiles/Dockerfile.tps
+        build-args: |
+          CHAIN="rococo"
           VERSION=${{ github.event.release.tag_name }}
           VCS_REF=${{ github.ref }}
           BUILD_DATE=${{ github.event.release.published_at }}
