- Fix build flag in build script - Remove the chartmuseum path in the registry path

--- a/utils/charts/sender/helmfile.yaml
+++ b/utils/charts/sender/helmfile.yaml
@@ -1,6 +1,6 @@
 repositories:
   - name: chartmuseum
-    url: http://localhost:8080/chartmuseum
+    url: http://localhost:8080
 
 releases:
   - name: stps-sender
