Use stable toolchain ?

--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -33,7 +33,7 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         profile: minimal
-        toolchain: nightly-2022-06-30
+        toolchain: stable
         components: rustfmt, clippy
         target: wasm32-unknown-unknown
         override: true
