--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -9,14 +9,12 @@ edition = "2021"
 env_logger = "0.9.0"
 sp-keyring = "7.0.0"
 sp-runtime = "7.0.0"
-futures-util = "0.3.28"
 sp-core = { version = "7.0.0", default-features = false  }
 tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros", "time"] }
 parity-scale-codec  = { version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
 subxt = "0.25.0"
 log = "0.4.16"
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
 
 [features]
-rococo = ["utils/tick"]
-tick = ["utils/rococo"]
+rococo = []
+tick = []
