--- a/utils/tps/Cargo.toml
+++ b/utils/tps/Cargo.toml
@@ -11,6 +11,10 @@ log = "0.4.16"
 env_logger = "0.9.0"
 clap = { version = "4.0.32", features = ["derive"] }
 tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
+futures-util = "0.3.28"
+parity-scale-codec = { version = "3.5.0", features = ["derive"] }
+subxt = "0.28.0"
 
 [[bin]]
 name = "tps"
