- Update helm packages - Update values.yaml for - Update way to pass genesis and para-finality arguments - Add more docs to genesis and para-finality arguments

--- a/utils/charts/tps/templates/deployment.yaml
+++ b/utils/charts/tps/templates/deployment.yaml
@@ -21,3 +21,9 @@ spec:
         {{- range $key, $val := .Values.containerArguments }}
           - --{{ $key }}={{ $val }}
         {{- end }}
+        {{ if eq .Values.scrapeFromGenesis.enabled true}}
+          - --genesis
+        {{ end }}
+        {{ if eq .Values.parablockFinality.enabled true }}
+          - --para-finality
+        {{ end }}
