bootstrap tps prometheus

--- a/utils/tps/Cargo.toml
+++ b/utils/tps/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 utils = { path = ".."}
+anyhow = "1.0.71"
 log = "0.4.16"
 env_logger = "0.9.0"
 clap = { version = "4.0.32", features = ["derive"] }
@@ -15,6 +16,8 @@ polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch =
 futures-util = "0.3.28"
 parity-scale-codec = { version = "3.5.0", features = ["derive"] }
 subxt = "0.28.0"
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
+
 
 [[bin]]
 name = "tps"
