--- a/utils/dockerfiles/Dockerfile.sender
+++ b/utils/dockerfiles/Dockerfile.sender
@@ -5,6 +5,8 @@ COPY . /build
 WORKDIR /build/utils/sender
 
 ARG CHAIN
+ARG VCS_REF
+ARG BUILD_DATE
 
 ENV FEATURE=${CHAIN}
 
@@ -14,7 +16,15 @@ FROM docker.io/library/ubuntu:20.04
 
 COPY --from=builder /build/utils/sender/target/release/sender /usr/local/bin
 
-RUN useradd -m -u 1000 -U -s /bin/sh -d /sender sender
+LABEL description="Docker image for sTPS sender binary" \
+	io.parity.image.authors="mattia@parity.io, devops-team@parity.io" \
+	io.parity.image.vendor="Parity Technologies" \
+	io.parity.image.description="Used to send Balances pallet Transfers from a set of pre-funded accounts" \
+	io.parity.image.created="${BUILD_DATE}" \
+    io.parity.image.source=https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.sender"
+
+RUN useradd -m -u 1000 -U -s /bin/sh -d /sender sender && \
+    rm -rf /usr/bin /usr/sbin
 
 USER sender
 
