--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,9 +1,9 @@
 name: Build and Publish containers for new releases
 
 on:
-  release:
-    types:
-      - created
+  push:
+    branches:
+      - main
 
 jobs:
   funder-tick:
