Remove features in funder build step

--- a/utils/dockerfiles/Dockerfile.funder
+++ b/utils/dockerfiles/Dockerfile.funder
@@ -10,7 +10,7 @@ ARG BUILD_DATE
 
 ENV FEATURE=${CHAIN}
 
-RUN cargo build --features=$FEATURE --release
+RUN cargo build --release
 
 FROM docker.io/library/ubuntu:20.04
 
