--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   funder-tick:
-    name:                         Build and push funder (tick) image
+    name:                         Build and push funder image
     runs-on:                      ubuntu-latest
     steps:
     - uses:                       actions/checkout@v3
@@ -19,7 +19,6 @@ jobs:
         dockerfiles: |
           ./utils/dockerfiles/Dockerfile.funder
         build-args: |
-          CHAIN=tick
           VCS_REF=${{ github.ref }}
           BUILD_DATE=${{ github.event.release.published_at }}
 
@@ -29,7 +28,7 @@ jobs:
       with:
         registry:                 docker.io/paritytech
         image:                    stps-funder
-        tags:                     tick-latest
+        tags:                     latest
         username:                 ${{ secrets.DOCKERHUB_USERNAME }}
         password:                 ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -98,37 +97,6 @@ jobs:
       run: |
         echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
         name: Build and Publish containers for new releases
-  
-  funder-rococo:
-    name:                         Build and push funder (rococo) image
-    runs-on:                      ubuntu-latest
-    steps:
-    - uses:                       actions/checkout@v3
-    - name:                       Build Image
-      uses:                       redhat-actions/buildah-build@v2
-      with:
-        image:                    stps-funder
-        tags:                     rococo-latest
-        dockerfiles: |
-          ./utils/dockerfiles/Dockerfile.funder
-        build-args: |
-          CHAIN=rococo
-          VCS_REF=${{ github.ref }}
-          BUILD_DATE=${{ github.event.release.published_at }}
-
-    - name:                       Push image to docker.io
-      id:                         push-to-dockerhub
-      uses:                       redhat-actions/push-to-registry@v2
-      with:
-        registry:                 docker.io/paritytech
-        image:                    stps-funder
-        tags:                     rococo-latest
-        username:                 ${{ secrets.DOCKERHUB_USERNAME }}
-        password:                 ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name:                       Check the image
-      run: |
-        echo "New image has been pushed to ${{ steps.push-to-dockerhub.outputs.registry-path }}"
   
   sender-rococo:
     name:                         Build and push sender (rococo) image
