- Add preliminary Versi deployment example - Rename stps-tps chart - Replace local registry for images with paritytech registry - Change the helm template files - Remove containerArguments in values.yaml files and add to args

--- a/utils/charts/sender/templates/deployment.yaml
+++ b/utils/charts/sender/templates/deployment.yaml
@@ -18,6 +18,6 @@ spec:
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
-          {{- range $key, $val := .Values.containerArguments }}
+          {{- range $key, $val := .Values.args }}
           - --{{ $key }}={{ $val }}
           {{- end }}
