--- a/utils/charts/tps/Chart.yaml
+++ b/utils/charts/tps/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: stps-tps-scraper
+name: stps-tps
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
