--- a/utils/dockerfiles/Dockerfile.funder
+++ b/utils/dockerfiles/Dockerfile.funder
@@ -9,7 +9,7 @@ ARG BUILD_DATE
 
 RUN cargo build --release
 
-FROM docker.io/library/ubuntu:20.04
+FROM docker.io/library/ubuntu:22.04
 
 COPY --from=builder /build/utils/funder/target/release/funder /usr/local/bin
 
@@ -20,8 +20,7 @@ LABEL description="Docker image for sTPS funder binary" \
 	io.parity.image.created="${BUILD_DATE}" \
     io.parity.image.source="https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.funder"
 
-RUN useradd -m -u 1000 -U -s /bin/sh -d /funder funder && \
-    rm -rf /usr/bin /usr/sbin
+RUN useradd -m -u 1000 -U -s /bin/sh -d /funder funder
 
 USER funder
 
