--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -23,3 +23,5 @@ name = "sender"
 [features]
 tick = ["utils/tick"]
 rococo = ["utils/rococo"]
+versi-tick = ["utils/versi-tick"]
+versi-relay = ["utils/versi-relay"]
