test docker build

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -1,9 +1,10 @@
-name: Build and Publish Docker containers
+name: Test Build Docker containers
 
 on:
   push:
     branches:
       - main
+  pull_request:
 
   workflow_dispatch:
 
