--- a/utils/tps/Cargo.toml
+++ b/utils/tps/Cargo.toml
@@ -24,6 +24,7 @@ name = "tps"
 
 [features]
 tick = ["utils/tick"]
+polkadot-parachain = ["utils/polkadot-parachain"]
 rococo = ["utils/rococo"]
 versi-tick = ["utils/versi-tick"]
 versi-relay = ["utils/versi-relay"]
