--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
 parity-scale-codec  = { version = "3.5.0", default-features = false, features = ["derive", "full", "bit-vec"] }
 subxt = "0.29.0"
 log = "0.4.18"
+jsonrpsee = { version = "0.16", features = ["jsonrpsee-ws-client"] }
 
 [features]
 rococo = []
