--- a/utils/tps/Cargo.toml
+++ b/utils/tps/Cargo.toml
@@ -28,3 +28,6 @@ polkadot-parachain = ["utils/polkadot-parachain"]
 rococo = ["utils/rococo"]
 versi-tick = ["utils/versi-tick"]
 versi-relay = ["utils/versi-relay"]
+
+[profile.release]
+debug = true
