--- a/utils/funder/Cargo.toml
+++ b/utils/funder/Cargo.toml
@@ -12,12 +12,8 @@ name = "funder"
 path = "src/main.rs"
 
 [dependencies]
-utils = { path = ".." }
 log = "0.4.18"
 env_logger = "0.10.0"
-futures = "0.3.28"
 serde_json = "1.0.96"
-sp-core = { version = "21.0.0", default-features = false  }
-sp-runtime = "24.0.0"
-tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
+subxt = { version = "0.33.0", features = ["substrate-compat"] }
 clap = { version = "4.3.1", features = ["derive"] }
