--- a/utils/funder/Cargo.toml
+++ b/utils/funder/Cargo.toml
@@ -15,5 +15,5 @@ path = "src/main.rs"
 log = "0.4.18"
 env_logger = "0.10.0"
 serde_json = "1.0.96"
-subxt = { version = "0.33.0", features = ["substrate-compat"] }
+subxt.workspace = true
 clap = { version = "4.3.1", features = ["derive"] }
