--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 funder = { path = "../funder" }
 log = "0.4.16"
 env_logger = "0.10.0"
-subxt = { version = "0.33.0", features = ["substrate-compat"] }
+subxt.workspace = true
 clap = { version = "4.3.0", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
 codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive", "full", "bit-vec"] }
